--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ share_hackernews: false
 markdown:     kramdown
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
-permalink:    /blog/:title
+permalink:    /blog/:title/
 paginate:     4
 sass:
   compressed: true
