new design, whitepaper

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:       Althea
-email:       jehan.tremback@gmail.com
+email:       hello@altheamesh.com
 author:      Jehan Tremback
 description: "Incentivized mesh networks."
 url:         http://altheamesh.com
